# LibFruit

./: CMakeLists.txt  Fruit.h  Log.cpp  Log.h  README.md  Result.h  Types.h
Assembly/: Disassembler.h  Instruction.h
Data/: BitMath.h  DataSize.cpp  DataSize.h  Parser.cpp  Parser.h  Stream.h
Data/FileFormat/: YSC.cpp  YSC.h
Graphics/: MessageBox.cpp  MessageBox.h
Memory/: ObjectPointer.h  Protection.cpp  Protection.h
Memory/Detour/: Memory.cpp  Memory.h  Virtual.cpp  Virtual.h
